syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "KeymanagerGrpc";

package br.com.zupacademy;

service KeyManagerRegistraGrpcService {

  rpc registra (RegistraChavePixRequest) returns (RegistraChavePixResponse) {}

}
service KeyManagerRemoveGrpcService {

  rpc remove (RemoveChavePixRequest) returns (RemoveChavePixResponse) {}
}

enum TipoDeChave{
  UNKNOWN_CHAVE = 0;
  CPF = 1;
  CELULAR = 2;
  EMAIL = 3;
  ALEATORIA = 4;
}

enum TipoDeConta{
  UNKNOWN_CONTA = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;

}

message RegistraChavePixRequest {
  string clientId = 1;
  TipoDeChave tipoDeContaChave = 2;
  string  chave = 3;
  TipoDeConta tipoDeConta = 4;
}

message RegistraChavePixResponse {
  string clientId = 1;
  string pixId = 2;
}

message RemoveChavePixRequest {
  string clientId = 1;
  string pixId = 2;
}

message RemoveChavePixResponse {
  string clientId = 1;
  string pixId = 2;
}